PROJECT(MAGGEN CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#set (CMAKE_VERBOSE_MAKEFILE ON)

set (CMAKE_BUILD_TYPE Release)

set (CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -Wno-deprecated")

set (CMAKE_INSTALL_PREFIX ./bin/)

SET (LIBRARY_OUTPUT_PATH    ${MAGGEN_BINARY_DIR}/bin
	CACHE PATH "Directory for Libraries")
SET (EXECUTABLE_OUTPUT_PATH ${MAGGEN_BINARY_DIR}/bin
	CACHE PATH "Directory for Executables")

ADD_SUBDIRECTORY(src)
