PROJECT(MAGGEN CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#SET (CMAKE_VERBOSE_MAKEFILE ON)

SET (CMAKE_BUILD_TYPE Release)

SET (CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -Wno-deprecated")

SET (CMAKE_INSTALL_PREFIX ./bin/)

SET (LIBRARY_OUTPUT_PATH    ${MAGGEN_BINARY_DIR}/bin/share/
	CACHE PATH "Directory for Libraries")
SET (EXECUTABLE_OUTPUT_PATH ${MAGGEN_BINARY_DIR}/bin
	CACHE PATH "Directory for Executables")

ADD_SUBDIRECTORY(src)
